--- a/Zplayer/Views/MainView.axaml
+++ b/Zplayer/Views/MainView.axaml
@@ -4,36 +4,64 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:Zplayer.ViewModels"
              xmlns:controls="clr-namespace:Material.Styles.Controls;assembly=Material.Styles"
-             mc:Ignorable="d" Width="400" Height="650"
+             mc:Ignorable="d" Width="600" Height="650"
              x:Class="Zplayer.Views.MainView"
+             xmlns:models="clr-namespace:Zplayer.Models"
              x:DataType="vm:MainViewModel">
-  <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
+    <Design.DataContext>
+        <!-- This only sets the DataContext for the previewer in an IDE,
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:MainViewModel />
-  </Design.DataContext>
+        <vm:MainViewModel />
+    </Design.DataContext>
 
-  <StackPanel Orientation="Vertical" Margin="20">
-    <StackPanel Orientation="Horizontal">
-      <Image Source="/Assets/cover.jpg" Stretch="Fill" Width="350" Name="cover"></Image>
-    </StackPanel>
-    <StackPanel Orientation="Vertical">
-      <StackPanel Orientation="Horizontal" Margin="0 10 0 0" >
-        <TextBlock FontSize="35" Name="title">- - -</TextBlock>
-        <Button Theme="{StaticResource MaterialOutlineButton}" Content="Otwórz" Click="OpenFile" Margin="10 0 0 0" />
-      </StackPanel>
-      <TextBlock Margin="0 10 0 0" Name="author">- - -</TextBlock>
-    </StackPanel>
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 50 0 30">
-      <controls:FloatingButton Classes="Mini" ><Image Source="/Assets/previousIcon.png"></Image></controls:FloatingButton>
-      <controls:FloatingButton Margin="20 0" Click="toggleSongState"><Image Source="/Assets/playIcon.ico"></Image></controls:FloatingButton>
-      <controls:FloatingButton Classes="Mini" ><Image Source="/Assets/nextIcon.png"></Image></controls:FloatingButton>
-    </StackPanel>
-    <StackPanel>
-      <Slider Name="Slider" IsSnapToTickEnabled="True" TickFrequency="1" />
-    </StackPanel>
-    <StackPanel HorizontalAlignment="Center" Margin="0 10 0 0">
-      <TextBlock>0:00 / 2:37</TextBlock>
-    </StackPanel>
-  </StackPanel>
+    <DockPanel>
+        <StackPanel Orientation="Vertical" Margin="20" Width="350" >
+            <StackPanel Orientation="Horizontal" Width="350" Height="350" Background="#444444">
+                <Image Source="" Stretch="Uniform" Width="350" Name="cover"></Image>
+            </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                    <TextBlock Width="350" FontSize="35" Name="title" TextTrimming="CharacterEllipsis"></TextBlock>
+                </StackPanel>
+                <TextBlock Width="350" Margin="0 10 0 0" Name="author" TextTrimming="CharacterEllipsis"></TextBlock>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 50 0 30">
+                <controls:FloatingButton Classes="Mini">
+                    <Image Source="/Assets/previousIcon.png"></Image>
+                </controls:FloatingButton>
+                <controls:FloatingButton Margin="20 0" Click="toggleSongState">
+                    <Image Source="/Assets/playIcon.ico" Name="changePlayStateIcon"></Image>
+                </controls:FloatingButton>
+                <controls:FloatingButton Classes="Mini">
+                    <Image Source="/Assets/nextIcon.png"></Image>
+                </controls:FloatingButton>
+            </StackPanel>
+            <StackPanel>
+                <Slider Name="MySlider" IsSnapToTickEnabled="True" TickFrequency="1" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 10 0 0">
+                <TextBlock Name="currentTime">0:00</TextBlock>
+                <TextBlock Margin="10 0">|</TextBlock>
+                <TextBlock Name="maxTime">0:00</TextBlock>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Margin="0 20 20 80" Background="#444444" Orientation="Vertical" Height="550">
+            <ListBox x:Name="PlaylistBox" SelectionMode="AlwaysSelected" SelectionChanged="SongSelected" Height="{Binding $parent.Bounds.Height}" Margin="0 0 0 0">
+                <ListBox.ItemTemplate>
+                    <DataTemplate DataType="models:MusicFile">
+                        <StackPanel Orientation="Horizontal" Spacing="5">
+                            <StackPanel>
+                                <Image Width="50" Source="{Binding Cover}"></Image>
+                            </StackPanel>
+                            <StackPanel VerticalAlignment="Center" Orientation="Vertical" Width="210">
+                                <TextBlock Text="{Binding Title}" FontSize="16" TextTrimming="CharacterEllipsis"></TextBlock>
+                                <TextBlock Text="{Binding Artist}" TextTrimming="CharacterEllipsis"></TextBlock>
+                            </StackPanel>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Button Theme="{StaticResource MaterialOutlineButton}" Background="#FF303030" Content="Otwórz" Click="OpenFile" Name="OpenFileButton" Margin="0 20 0 0"/>
+        </StackPanel>
+    </DockPanel>
 </UserControl>
